fix_scrollbar

--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@ body {
   margin: 30px 0 0 30px;
 }
 
-.App img {
+.App > img {
   width: 200px;
   margin-bottom: 60px;
 }
